[gd_scene load_steps=16 format=3 uid="uid://cifk2ikqqtxg2"]

[ext_resource type="Texture2D" uid="uid://cfh7a20vg26aj" path="res://assets/terrain_dirt_vertical_bottom.png" id="1_3752k"]
[ext_resource type="Script" path="res://scenes/Game.gd" id="1_phd0a"]
[ext_resource type="Texture2D" uid="uid://c30wx1ksh0nhn" path="res://assets/terrain_dirt_vertical_middle.png" id="2_tuc15"]
[ext_resource type="Texture2D" uid="uid://bypr2os5fvcsm" path="res://assets/background_solid_grass.png" id="3_o1qho"]
[ext_resource type="Texture2D" uid="uid://vpfr1cny5op2" path="res://assets/bee_a.png" id="5_2ohkg"]
[ext_resource type="Script" path="res://scenes/Bee.gd" id="5_3vvtf"]
[ext_resource type="Texture2D" uid="uid://bl2347mkifodj" path="res://assets/bee_b.png" id="6_gpla7"]
[ext_resource type="Texture2D" uid="uid://daar3nv80jax0" path="res://assets/bee_rest.png" id="7_vf6cu"]
[ext_resource type="PackedScene" uid="uid://bw437naqug2sj" path="res://scenes/Flower.tscn" id="9_vmqsw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_54a0u"]
texture = ExtResource("1_3752k")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o5xvx"]
texture = ExtResource("2_tuc15")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_6twmy"]
sources/0 = SubResource("TileSetAtlasSource_54a0u")
sources/1 = SubResource("TileSetAtlasSource_o5xvx")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qc1es"]
radius = 45.0
height = 96.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u3n6l"]
radius = 45.0
height = 90.0

[sub_resource type="SpriteFrames" id="SpriteFrames_ac1wl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_2ohkg")
}, {
"duration": 1.0,
"texture": ExtResource("6_gpla7")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_vf6cu")
}],
"loop": true,
"name": &"rest",
"speed": 5.0
}]

[node name="Game" type="Node2D" groups=["Game"]]
position = Vector2(397, 433)
script = ExtResource("1_phd0a")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_6twmy")
format = 2
layer_0/tile_data = PackedInt32Array(-1048601, 1, 0, -983065, 1, 1, -917529, 1, 2, -851993, 1, 3, -1048600, 65537, 0, -983064, 65537, 1, -917528, 65537, 2, -851992, 65537, 3, -1048599, 131073, 0, -983063, 131073, 1, -917527, 131073, 2, -851991, 131073, 3, -1048598, 196609, 0, -983062, 196609, 1, -917526, 196609, 2, -851990, 196609, 3, -786457, 1, 0, -720921, 1, 1, -655385, 1, 2, -589849, 1, 3, -786456, 65537, 0, -720920, 65537, 1, -655384, 65537, 2, -589848, 65537, 3, -786455, 131073, 0, -720919, 131073, 1, -655383, 131073, 2, -589847, 131073, 3, -786454, 196609, 0, -720918, 196609, 1, -655382, 196609, 2, -589846, 196609, 3, -524313, 1, 0, -458777, 1, 1, -393241, 1, 2, -327705, 1, 3, -524312, 65537, 0, -458776, 65537, 1, -393240, 65537, 2, -327704, 65537, 3, -524311, 131073, 0, -458775, 131073, 1, -393239, 131073, 2, -327703, 131073, 3, -524310, 196609, 0, -458774, 196609, 1, -393238, 196609, 2, -327702, 196609, 3, -262169, 1, 0, -196633, 1, 1, -131097, 1, 2, -65561, 1, 3, -262168, 65537, 0, -196632, 65537, 1, -131096, 65537, 2, -65560, 65537, 3, -262167, 131073, 0, -196631, 131073, 1, -131095, 131073, 2, -65559, 131073, 3, -262166, 196609, 0, -196630, 196609, 1, -131094, 196609, 2, -65558, 196609, 3, -25, 1, 0, 65511, 1, 1, 131047, 1, 2, 196583, 1, 3, -24, 65537, 0, 65512, 65537, 1, 131048, 65537, 2, 196584, 65537, 3, -23, 131073, 0, 65513, 131073, 1, 131049, 131073, 2, 196585, 131073, 3, -22, 196609, 0, 65514, 196609, 1, 131050, 196609, 2, 196586, 196609, 3, 262119, 1, 0, 327655, 1, 1, 393191, 1, 2, 458727, 1, 3, 262120, 65537, 0, 327656, 65537, 1, 393192, 65537, 2, 458728, 65537, 3, 262121, 131073, 0, 327657, 131073, 1, 393193, 131073, 2, 458729, 131073, 3, 262122, 196609, 0, 327658, 196609, 1, 393194, 196609, 2, 458730, 196609, 3, 524263, 1, 0, 589799, 1, 1, 655335, 1, 2, 720871, 0, 0, 524264, 65537, 0, 589800, 65537, 1, 655336, 65537, 2, 720872, 65536, 0, 524265, 131073, 0, 589801, 131073, 1, 655337, 131073, 2, 720873, 131072, 0, 524266, 196609, 0, 589802, 196609, 1, 655338, 196609, 2, 720874, 196608, 0, 786407, 1, 0, 851943, 1, 1, 917479, 1, 0, 786408, 65537, 0, 851944, 65537, 1, 917480, 65537, 0, 786409, 131073, 0, 851945, 131073, 1, 917481, 131073, 0, 786410, 196609, 0, 851946, 196609, 1, 917482, 196609, 0, 917485, 0, 1342177280, 983021, 65536, 1342177280, 1048557, 131072, 1342177280, 1114093, 196608, 1342177280, 917484, 0, 1342177281, 983020, 65536, 1342177281, 1048556, 131072, 1342177281, 1114092, 196608, 1342177281, 917483, 0, 1342177282, 983019, 65536, 1342177282, 1048555, 131072, 1342177282, 1114091, 196608, 1342177282, 983018, 196609, 1, 1048554, 196609, 2, 1114090, 196609, 3, 1114094, 1, 1610612736, 1048558, 65537, 1610612736, 983022, 131073, 1610612736, 917486, 196609, 1610612736, 1114095, 1, 1610612737, 1048559, 65537, 1610612737, 983023, 131073, 1610612737, 917487, 196609, 1610612737, 1114096, 1, 1610612738, 1048560, 65537, 1610612738, 983024, 131073, 1610612738, 917488, 196609, 1610612738, 1114097, 1, 1610612739, 1048561, 65537, 1610612739, 983025, 131073, 1610612739, 917489, 196609, 1610612739, 1114098, 1, 1610612736, 1048562, 65537, 1610612736, 983026, 131073, 1610612736, 917490, 196609, 1610612736, 1114099, 1, 1610612737, 1048563, 65537, 1610612737, 983027, 131073, 1610612737, 917491, 196609, 1610612737, 1114100, 1, 1610612738, 1048564, 65537, 1610612738, 983028, 131073, 1610612738, 917492, 196609, 1610612738, 1114101, 1, 1610612739, 1048565, 65537, 1610612739, 983029, 131073, 1610612739, 917493, 196609, 1610612739, 1114102, 1, 1610612736, 1048566, 65537, 1610612736, 983030, 131073, 1610612736, 917494, 196609, 1610612736, 1114103, 1, 1610612737, 1048567, 65537, 1610612737, 983031, 131073, 1610612737, 917495, 196609, 1610612737, 1114104, 1, 1610612738, 1048568, 65537, 1610612738, 983032, 131073, 1610612738, 917496, 196609, 1610612738, 1114105, 1, 1610612739, 1048569, 65537, 1610612739, 983033, 131073, 1610612739, 917497, 196609, 1610612739, 1114106, 1, 1610612736, 1048570, 65537, 1610612736, 983034, 131073, 1610612736, 917498, 196609, 1610612736, 1114107, 1, 1610612737, 1048571, 65537, 1610612737, 983035, 131073, 1610612737, 917499, 196609, 1610612737, 1114108, 1, 1610612738, 1048572, 65537, 1610612738, 983036, 131073, 1610612738, 917500, 196609, 1610612738, 1114109, 1, 1610612739, 1048573, 65537, 1610612739, 983037, 131073, 1610612739, 917501, 196609, 1610612739, 1114110, 1, 1610612736, 1048574, 65537, 1610612736, 983038, 131073, 1610612736, 917502, 196609, 1610612736, 1114111, 1, 1610612737, 1048575, 65537, 1610612737, 983039, 131073, 1610612737, 917503, 196609, 1610612737, 1048576, 1, 1610612738, 983040, 65537, 1610612738, 917504, 131073, 1610612738, 851968, 196609, 1610612738, 1048577, 1, 1610612739, 983041, 65537, 1610612739, 917505, 131073, 1610612739, 851969, 196609, 1610612739, 1048578, 1, 1610612736, 983042, 65537, 1610612736, 917506, 131073, 1610612736, 851970, 196609, 1610612736, 1048579, 1, 1610612737, 983043, 65537, 1610612737, 917507, 131073, 1610612737, 851971, 196609, 1610612737, 1048580, 1, 1610612738, 983044, 65537, 1610612738, 917508, 131073, 1610612738, 851972, 196609, 1610612738, 1048581, 1, 1610612739, 983045, 65537, 1610612739, 917509, 131073, 1610612739, 851973, 196609, 1610612739, 1048582, 1, 1610612736, 983046, 65537, 1610612736, 917510, 131073, 1610612736, 851974, 196609, 1610612736, 1048583, 1, 1610612737, 983047, 65537, 1610612737, 917511, 131073, 1610612737, 851975, 196609, 1610612737, 1048584, 1, 1610612738, 983048, 65537, 1610612738, 917512, 131073, 1610612738, 851976, 196609, 1610612738, 1048585, 1, 1610612739, 983049, 65537, 1610612739, 917513, 131073, 1610612739, 851977, 196609, 1610612739, 1048586, 1, 1610612736, 983050, 65537, 1610612736, 917514, 131073, 1610612736, 851978, 196609, 1610612736, 1048587, 1, 1610612737, 983051, 65537, 1610612737, 917515, 131073, 1610612737, 851979, 196609, 1610612737, 1048588, 1, 1610612738, 983052, 65537, 1610612738, 917516, 131073, 1610612738, 851980, 196609, 1610612738, 1048589, 1, 1610612739, 983053, 65537, 1610612739, 917517, 131073, 1610612739, 851981, 196609, 1610612739, 1048590, 1, 1610612736, 983054, 65537, 1610612736, 917518, 131073, 1610612736, 851982, 196609, 1610612736, 1048591, 1, 1610612737, 983055, 65537, 1610612737, 917519, 131073, 1610612737, 851983, 196609, 1610612737, 1048592, 1, 1610612738, 983056, 65537, 1610612738, 917520, 131073, 1610612738, 851984, 196609, 1610612738, 1048593, 1, 1610612739, 983057, 65537, 1610612739, 917521, 131073, 1610612739, 851985, 196609, 1610612739, 851986, 1, 0, 786450, 1, 0, 720914, 1, 2, 655378, 1, 1, 851987, 65537, 0, 786451, 65537, 0, 720915, 65537, 2, 655379, 65537, 1, 851988, 131073, 0, 786452, 131073, 0, 720916, 131073, 2, 655380, 131073, 1, 851989, 196609, 0, 786453, 196609, 0, 720917, 196609, 2, 655381, 196609, 1, 1048594, 1, 3, 983058, 1, 2, 917522, 1, 1, 1048595, 65537, 3, 983059, 65537, 2, 917523, 65537, 1, 1048596, 131073, 3, 983060, 131073, 2, 917524, 131073, 1, 1048597, 196609, 3, 983061, 196609, 2, 917525, 196609, 1, 589842, 1, 0, 589843, 65537, 0, 589844, 131073, 0, 589845, 196609, 0, 524306, 1, 3, 458770, 1, 2, 393234, 1, 1, 327698, 1, 0, 524307, 65537, 3, 458771, 65537, 2, 393235, 65537, 1, 327699, 65537, 0, 524308, 131073, 3, 458772, 131073, 2, 393236, 131073, 1, 327700, 131073, 0, 524309, 196609, 3, 458773, 196609, 2, 393237, 196609, 1, 327701, 196609, 0, 262162, 1, 3, 196626, 1, 2, 131090, 1, 1, 65554, 1, 0, 262163, 65537, 3, 196627, 65537, 2, 131091, 65537, 1, 65555, 65537, 0, 262164, 131073, 3, 196628, 131073, 2, 131092, 131073, 1, 65556, 131073, 0, 262165, 196609, 3, 196629, 196609, 2, 131093, 196609, 1, 65557, 196609, 0, 18, 1, 3, -65518, 1, 2, -131054, 1, 1, -196590, 1, 0, 19, 65537, 3, -65517, 65537, 2, -131053, 65537, 1, -196589, 65537, 0, 20, 131073, 3, -65516, 131073, 2, -131052, 131073, 1, -196588, 131073, 0, 21, 196609, 3, -65515, 196609, 2, -131051, 196609, 1, -196587, 196609, 0, -262126, 1, 3, -327662, 1, 2, -393198, 1, 1, -458734, 1, 0, -262125, 65537, 3, -327661, 65537, 2, -393197, 65537, 1, -458733, 65537, 0, -262124, 131073, 3, -327660, 131073, 2, -393196, 131073, 1, -458732, 131073, 0, -262123, 196609, 3, -327659, 196609, 2, -393195, 196609, 1, -458731, 196609, 0, -524270, 1, 3, -589806, 1, 2, -655342, 1, 1, -720878, 1, 0, -524269, 65537, 3, -589805, 65537, 2, -655341, 65537, 1, -720877, 65537, 0, -524268, 131073, 3, -589804, 131073, 2, -655340, 131073, 1, -720876, 131073, 0, -524267, 196609, 3, -589803, 196609, 2, -655339, 196609, 1, -720875, 196609, 0, -786414, 1, 3, -851950, 1, 2, -917486, 1, 1, -983022, 1, 0, -786413, 65537, 3, -851949, 65537, 2, -917485, 65537, 1, -983021, 65537, 0, -786412, 131073, 3, -851948, 131073, 2, -917484, 131073, 1, -983020, 131073, 0, -786411, 196609, 3, -851947, 196609, 2, -917483, 196609, 1, -983019, 196609, 0, -1048558, 1, 3, -1114094, 1, 2, -1179630, 1, 1, -1245166, 1, 0, -1048557, 65537, 3, -1114093, 65537, 2, -1179629, 65537, 1, -1245165, 65537, 0, -1048556, 131073, 3, -1114092, 131073, 2, -1179628, 131073, 1, -1245164, 131073, 0, -1048555, 196609, 3, -1114091, 196609, 2, -1179627, 196609, 1, -1245163, 196609, 0, -1310702, 1, 3, -1376238, 1, 2, -1441774, 1, 1, -1507310, 1, 0, -1310701, 65537, 3, -1376237, 65537, 2, -1441773, 65537, 1, -1507309, 65537, 0, -1310700, 131073, 3, -1376236, 131073, 2, -1441772, 131073, 1, -1507308, 131073, 0, -1310699, 196609, 3, -1376235, 196609, 2, -1441771, 196609, 1, -1507307, 196609, 0, -1572849, 1, 1610612736, -1638385, 65537, 1610612736, -1703921, 131073, 1610612736, -1769457, 196609, 1610612736, -1572848, 1, 1610612737, -1638384, 65537, 1610612737, -1703920, 131073, 1610612737, -1769456, 196609, 1610612737, -1572847, 1, 1610612738, -1638383, 65537, 1610612738, -1703919, 131073, 1610612738, -1769455, 196609, 1610612738, -1572846, 1, 3, -1638382, 1, 2, -1703918, 1, 1, -1769454, 1, 0, -1572853, 1, 1610612736, -1638389, 65537, 1610612736, -1703925, 131073, 1610612736, -1769461, 196609, 1610612736, -1572852, 1, 1610612737, -1638388, 65537, 1610612737, -1703924, 131073, 1610612737, -1769460, 196609, 1610612737, -1572851, 1, 1610612738, -1638387, 65537, 1610612738, -1703923, 131073, 1610612738, -1769459, 196609, 1610612738, -1572850, 1, 1610612739, -1638386, 65537, 1610612739, -1703922, 131073, 1610612739, -1769458, 196609, 1610612739, -1572857, 1, 1610612736, -1638393, 65537, 1610612736, -1703929, 131073, 1610612736, -1769465, 196609, 1610612736, -1572856, 1, 1610612737, -1638392, 65537, 1610612737, -1703928, 131073, 1610612737, -1769464, 196609, 1610612737, -1572855, 1, 1610612738, -1638391, 65537, 1610612738, -1703927, 131073, 1610612738, -1769463, 196609, 1610612738, -1572854, 1, 1610612739, -1638390, 65537, 1610612739, -1703926, 131073, 1610612739, -1769462, 196609, 1610612739, -1572861, 1, 1610612736, -1638397, 65537, 1610612736, -1703933, 131073, 1610612736, -1769469, 196609, 1610612736, -1572860, 1, 1610612737, -1638396, 65537, 1610612737, -1703932, 131073, 1610612737, -1769468, 196609, 1610612737, -1572859, 1, 1610612738, -1638395, 65537, 1610612738, -1703931, 131073, 1610612738, -1769467, 196609, 1610612738, -1572858, 1, 1610612739, -1638394, 65537, 1610612739, -1703930, 131073, 1610612739, -1769466, 196609, 1610612739, -1507329, 1, 1610612736, -1572865, 65537, 1610612736, -1638401, 131073, 1610612736, -1703937, 196609, 1610612736, -1572864, 1, 1610612737, -1638400, 65537, 1610612737, -1703936, 131073, 1610612737, -1769472, 196609, 1610612737, -1572863, 1, 1610612738, -1638399, 65537, 1610612738, -1703935, 131073, 1610612738, -1769471, 196609, 1610612738, -1572862, 1, 1610612739, -1638398, 65537, 1610612739, -1703934, 131073, 1610612739, -1769470, 196609, 1610612739, -1507333, 1, 1610612736, -1572869, 65537, 1610612736, -1638405, 131073, 1610612736, -1703941, 196609, 1610612736, -1507332, 1, 1610612737, -1572868, 65537, 1610612737, -1638404, 131073, 1610612737, -1703940, 196609, 1610612737, -1507331, 1, 1610612738, -1572867, 65537, 1610612738, -1638403, 131073, 1610612738, -1703939, 196609, 1610612738, -1507330, 1, 1610612739, -1572866, 65537, 1610612739, -1638402, 131073, 1610612739, -1703938, 196609, 1610612739, -1507337, 1, 1610612736, -1572873, 65537, 1610612736, -1638409, 131073, 1610612736, -1703945, 196609, 1610612736, -1507336, 1, 1610612737, -1572872, 65537, 1610612737, -1638408, 131073, 1610612737, -1703944, 196609, 1610612737, -1507335, 1, 1610612738, -1572871, 65537, 1610612738, -1638407, 131073, 1610612738, -1703943, 196609, 1610612738, -1507334, 1, 1610612739, -1572870, 65537, 1610612739, -1638406, 131073, 1610612739, -1703942, 196609, 1610612739, -1507341, 1, 1610612736, -1572877, 65537, 1610612736, -1638413, 131073, 1610612736, -1703949, 196609, 1610612736, -1507340, 1, 1610612737, -1572876, 65537, 1610612737, -1638412, 131073, 1610612737, -1703948, 196609, 1610612737, -1507339, 1, 1610612738, -1572875, 65537, 1610612738, -1638411, 131073, 1610612738, -1703947, 196609, 1610612738, -1507338, 1, 1610612739, -1572874, 65537, 1610612739, -1638410, 131073, 1610612739, -1703946, 196609, 1610612739, -1507345, 1, 1610612736, -1572881, 65537, 1610612736, -1638417, 131073, 1610612736, -1703953, 196609, 1610612736, -1507344, 1, 1610612737, -1572880, 65537, 1610612737, -1638416, 131073, 1610612737, -1703952, 196609, 1610612737, -1507343, 1, 1610612738, -1572879, 65537, 1610612738, -1638415, 131073, 1610612738, -1703951, 196609, 1610612738, -1507342, 1, 1610612739, -1572878, 65537, 1610612739, -1638414, 131073, 1610612739, -1703950, 196609, 1610612739, -1507349, 1, 1610612736, -1572885, 65537, 1610612736, -1638421, 131073, 1610612736, -1703957, 196609, 1610612736, -1507348, 1, 1610612737, -1572884, 65537, 1610612737, -1638420, 131073, 1610612737, -1703956, 196609, 1610612737, -1507347, 1, 1610612738, -1572883, 65537, 1610612738, -1638419, 131073, 1610612738, -1703955, 196609, 1610612738, -1507346, 1, 1610612739, -1572882, 65537, 1610612739, -1638418, 131073, 1610612739, -1703954, 196609, 1610612739, -1507353, 1, 3, -1572889, 1, 2, -1638425, 1, 1, -1703961, 1, 0, -1507352, 65537, 3, -1572888, 65537, 2, -1638424, 65537, 1, -1703960, 65537, 0, -1507351, 131073, 3, -1572887, 131073, 2, -1638423, 131073, 1, -1703959, 131073, 0, -1507350, 196609, 3, -1572886, 196609, 2, -1638422, 196609, 1, -1703958, 196609, 0, -1114137, 1, 3, -1179673, 1, 2, -1245209, 1, 1, -1310745, 1, 0, -1114136, 65537, 3, -1179672, 65537, 2, -1245208, 65537, 1, -1310744, 65537, 0, -1114135, 131073, 3, -1179671, 131073, 2, -1245207, 131073, 1, -1310743, 131073, 0, -1114134, 196609, 3, -1179670, 196609, 2, -1245206, 196609, 1, -1310742, 196609, 0, -1376281, 1, 3, -1441817, 1, 2, -1376280, 65537, 3, -1441816, 65537, 2, -1376279, 131073, 3, -1441815, 131073, 2, -1376278, 196609, 3, -1441814, 196609, 2, -1572845, 65537, 3, -1638381, 65537, 2, -1703917, 65537, 1, -1769453, 65537, 0, -1572844, 131073, 3, -1638380, 131073, 2, -1703916, 131073, 1, -1769452, 131073, 0, -1572843, 196609, 3, -1638379, 196609, 2, -1703915, 196609, 1, -1769451, 196609, 0, 983015, 1, 1, 983016, 65537, 1, 983017, 131073, 1, 1114087, 1, 3, 1048551, 1, 2, 1114088, 65537, 3, 1048552, 65537, 2, 1114089, 131073, 3, 1048553, 131073, 2, -1441798, 65537, 0, -1376262, 65537, 1, -1310726, 65537, 0, -1245190, 65537, 1, -1441797, 131073, 0, -1376261, 131073, 1, -1310725, 131073, 0, -1245189, 131073, 1, -1179654, 65537, 2, -1114118, 65537, 0, -1179653, 131073, 2, -1114117, 131073, 0, -1048582, 65537, 1, -983046, 65537, 2, -917510, 65537, 0, -1048581, 131073, 1, -983045, 131073, 2, -917509, 131073, 0, -851974, 65537, 1, -786438, 65537, 2, -720902, 65537, 0, -851973, 131073, 1, -786437, 131073, 2, -720901, 131073, 0, -655366, 65537, 1, -589830, 65537, 2, -524294, 65537, 3, -655365, 131073, 1, -589829, 131073, 2, -524293, 131073, 3, -458758, 65537, 0, -393222, 65537, 1, -327686, 65537, 2, -262150, 65537, 3, -458757, 131073, 0, -393221, 131073, 1, -327685, 131073, 2, -262149, 131073, 3, -524281, 65537, 0, -458745, 65537, 1, -393209, 65537, 2, -327673, 65537, 0, -524280, 131073, 0, -458744, 131073, 1, -393208, 131073, 2, -327672, 131073, 0, -262137, 65537, 1, -196601, 65537, 2, -131065, 65537, 3, -262136, 131073, 1, -196600, 131073, 2, -131064, 131073, 3, 327668, 65537, 0, 393204, 65537, 1, 458740, 65537, 0, 524276, 65537, 1, 327669, 131073, 0, 393205, 131073, 1, 458741, 131073, 0, 524277, 131073, 1, 589812, 65537, 2, 655348, 65537, 3, 589813, 131073, 2, 655349, 131073, 3, 262149, 65537, 0, 327685, 65537, 1, 393221, 65537, 2, 458757, 65537, 0, 262150, 131073, 0, 327686, 131073, 1, 393222, 131073, 2, 458758, 131073, 0, 524293, 65537, 1, 589829, 65537, 2, 655365, 65537, 3, 524294, 131073, 1, 589830, 131073, 2, 655366, 131073, 3, -1048572, 65537, 1610612736, -1114108, 131073, 1610612736, -1048571, 65537, 1610612737, -1114107, 131073, 1610612737, -1048570, 65537, 1610612738, -1114106, 131073, 1610612738, -1048569, 65537, 1610612739, -1114105, 131073, 1610612739, -1048568, 65537, 1610612736, -1114104, 131073, 1610612736, -1048567, 65537, 1610612737, -1114103, 131073, 1610612737, -1048566, 65537, 1610612738, -1114102, 131073, 1610612738, -1048565, 65537, 1610612739, -1114101, 131073, 1610612739, -786449, 65537, 1610612736, -851985, 131073, 1610612736, -786448, 65537, 1610612737, -851984, 131073, 1610612737, -786447, 65537, 1610612738, -851983, 131073, 1610612738, -786446, 65537, 1610612739, -851982, 131073, 1610612739)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(397, 433)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(190, -98)
scale = Vector2(4.39062, 2.58594)
texture = ExtResource("3_o1qho")

[node name="Bee" type="CharacterBody2D" parent="."]
position = Vector2(-67, 0)
script = ExtResource("5_3vvtf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bee"]
position = Vector2(-8, 1)
shape = SubResource("CapsuleShape2D_qc1es")

[node name="Area2D" type="Area2D" parent="Bee"]
position = Vector2(-39, 26)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bee/Area2D"]
position = Vector2(29, -25)
shape = SubResource("CapsuleShape2D_u3n6l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Bee"]
position = Vector2(-3, 2)
sprite_frames = SubResource("SpriteFrames_ac1wl")
animation = &"fly"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -326.0
offset_top = -408.0
offset_right = -256.0
offset_bottom = -378.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FlowerCounter" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "ðŸŒ¼ 0"

[node name="TimerLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="Flower" parent="." instance=ExtResource("9_vmqsw")]
position = Vector2(-2, 106)

[node name="Flower2" parent="." instance=ExtResource("9_vmqsw")]
position = Vector2(221, -166)

[node name="Flower3" parent="." instance=ExtResource("9_vmqsw")]
position = Vector2(70, -140)

[node name="Flower4" parent="." instance=ExtResource("9_vmqsw")]
position = Vector2(-239, -89)

[node name="Flower5" parent="." instance=ExtResource("9_vmqsw")]
position = Vector2(-263, 119)

[node name="Flower6" parent="." instance=ExtResource("9_vmqsw")]
position = Vector2(228, 150)

[node name="Flower7" parent="." instance=ExtResource("9_vmqsw")]
position = Vector2(16, -318)

[node name="Flower8" parent="." instance=ExtResource("9_vmqsw")]
position = Vector2(-252, -320)

[node name="GameTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
